Update profile image URL in index.html

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </div>
 
     <div class="home-right">
-        <img src="./images/gk.jpg" alt="Gopika">
+        <img src="https://media.licdn.com/dms/image/v2/D4E03AQEfmgsXUP3yQg/profile-displayphoto-shrink_400_400/profile-displayphoto-shrink_400_400/0/1731693898509?e=1767225600&v=beta&t=oiFQOYhxOV3uwX9Y12ddHEM6wR2KyDr8t29tUWz9-Mg" alt="Gopika">
     </div>
 
 </div>
@@ -42,4 +42,5 @@
 </footer>
 
 </body>
+
 </html>
