--- a/skills.html
+++ b/skills.html
@@ -51,15 +51,17 @@
     <div class="info-box">
         <div class="info-title">ACHIEVEMENTS</div>
 
-        <div class="certificates">
-            <img src="./images/cert1.jpg" alt="Certificate 1">
-            <img src="./images/cert2.jpg" alt="Certificate 2">
-            <img src="./images/cert3.jpg" alt="Certificate 3">
-        </div>
+    <div class="certificates">
+    <img src="images/cert1.jpg" alt="Certificate 1">
+    <img src="images/cert2.jpg" alt="Certificate 2">
+    <img src="images/cert3.jpg" alt="Certificate 3">
+    </div>
+
     </div>
 
 </div>
 
 <footer>© 2025 Gopika | Portfolio</footer>
 </body>
+
 </html>
