--- a/skills.html
+++ b/skills.html
@@ -50,12 +50,11 @@
     </div>
     <div class="info-box">
         <div class="info-title">ACHIEVEMENTS</div>
-
-    <div class="certificates">
-    <img src="images/cert1.jpg" alt="Certificate 1">
-    <img src="images/cert2.jpg" alt="Certificate 2">
-    <img src="images/cert3.jpg" alt="Certificate 3">
-    </div>
+   <div class="certificates">
+    <img src="cert1.jpg" alt="Certificate 1">
+    <img src="cert2.jpg" alt="Certificate 2">
+    <img src="cert3.jpg" alt="Certificate 3">
+</div>
 
     </div>
 
@@ -65,3 +64,4 @@
 </body>
 
 </html>
+
