Fix HTML encoding issues in projetcs.html

--- a/projetcs.html
+++ b/projetcs.html
@@ -45,7 +45,8 @@
             <p><strong>Tools:</strong> Figma</p>
         </div>
         <div class="project-image">
-            <img src="./images/voyista.jpg.png" alt="Travel App UI">
+           <img src="voyista.jpg.png" alt="Travel App UI">
+
         </div>
     </div>
 
@@ -59,7 +60,8 @@
             <p><strong>Technologies:</strong> Java</p>
         </div>
         <div class="project-image">
-            <img src="./images/tictactoe.jpg.png" alt="Tic Tac Toe Game">
+           <img src="tictactoe.jpg.png" alt="Tic Tac Toe Game">
+
         </div>
     </div>
 
@@ -70,4 +72,5 @@
 </footer>
 
 </body>
+
 </html>
